--- a/source/packages.config
+++ b/source/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngleSharp" version="0.16.1" targetFramework="net472" />
+  <package id="AngleSharp" version="0.17.1" targetFramework="net472" />
+  <package id="Autoupdater.NET.Official" version="1.7.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.43" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1210.39" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Ookii.Dialogs.WinForms" version="4.0.0" targetFramework="net472" />
@@ -9,12 +11,12 @@
   <package id="Selenium.WebDriver" version="4.2.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Resources.Extensions" version="6.0.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
-  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
   <package id="WebDriverManager" version="2.13.0" targetFramework="net472" />
 </packages>
