--- a/source/packages.config
+++ b/source/packages.config
@@ -8,6 +8,7 @@
   <package id="Ookii.Dialogs.WinForms" version="4.0.0" targetFramework="net472" />
   <package id="RestSharp" version="106.15.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.2.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="102.0.5005.6102" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
